[package]
name = "illustrator-sys"
version = "0.1.0"
authors = ["Alexander Czernay <alexander@czernay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.54.1"
glob = "0.3.0"
widestring = "0.4.2"
cc = { version = "1.0", features = ["parallel"] }