[package]
name = "illustrator-sys"
version = "0.1.0"
authors = ["Alexander Czernay <alexander@czernay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.55"
glob = "0.3"
widestring = "0.4"
cc = { version = "1.0", features = ["parallel"] }
build_helper = { path = "../build_helper" }

